<resources>
    <string name="app_name">FlightFinder.com</string>
    <string name="client_info_title">Your information :</string>
    <string name="client_personal_info_text">Personal information</string>
    <string name="client_billing_info_text">Billing information</string>
    <string name="first_name_hint">Firstname</string>
    <string name="last_name_hint">Lastname</string>
    <string name="email_hint">Email</string>
    <string name="address_hint">Address</string>
    <string name="credit_card_number_hint">Credit card number</string>
    <string name="expiracy_date_hint">Expiracy date of the credit card</string>
    <string name="submit_text">Save</string>
    <string name="edit_text">Edit</string>
    <string name="first_name_displayed"></string>
    <string name="last_name_displayed"></string>
    <string name="email_displayed"></string>
    <string name="address_displayed"></string>
    <string name="credit_card_number_displayed"></string>
    <string name="expiracy_date_displayed"></string>
</resources>
