<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="etienne.flightfinderdotcom.DisplayClientInfoActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_info_title"
        android:id="@+id/textView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_personal_info_text"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:id="@+id/personalInfoTitle" />

    <TextView
        android:id="@+id/first_name_field"
        android:text="@string/first_name_displayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/personalInfoTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/last_name_field"
        android:text="@string/last_name_displayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/email_field"
        android:text="@string/email_displayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_name_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/client_billing_info_text"
        android:id="@+id/billingInfoTitle"
        android:layout_below="@+id/email_field"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/address_field"
        android:text="@string/address_displayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billingInfoTitle"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/credit_card_number_field"
        android:text="@string/credit_card_number_displayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/expiracy_date_field"
        android:text="@string/expiracy_date_displayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credit_card_number_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"
        android:id="@+id/button"
        android:onClick="editClientInfo"
        android:layout_below="@+id/expiracy_date_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp" />

</RelativeLayout>
